[project]
name = "replicate-flux-lora"
version = "1.3.1"
description = "WebUI for running Flux LoRAs using the Replicate API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dynaconf",
    "httpx",
    "loguru",
    "nicegui",
    "pillow>=11.3.0",
    "python-dotenv",
    "replicate",
    "token-count",
    "toml",
]
